brain/sources/prod-metadata/objects/Recruiter__c/Recruiter__c.object-meta.xml
<CustomObject>
    <label>Employees</label>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>