brain/sources/prod-metadata/objects/Recruiter__c/fields/Active_For_Interview_Support__c.field-meta.xml
<CustomField>
    <fullName>Active_For_Interview_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active For Interview Support</label>
    <type>Checkbox</type>
</CustomField>