brain/sources/prod-metadata/objects/Recruiter__c/fields/Active_For_Mock_Interview__c.field-meta.xml
<CustomField>
    <fullName>Active_For_Mock_Interview__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active For Mock Interview</label>
    <type>Checkbox</type>
</CustomField>