brain/sources/prod-metadata/objects/Recruiter__c/fields/Allow_Buffer_Time__c.field-meta.xml
<CustomField>
    <fullName>Allow_Buffer_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Buffer Time</label>
    <type>Checkbox</type>
</CustomField>