brain/sources/prod-metadata/objects/Recruiter__c/fields/Assigned_Sr_Recruiter__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Sr_Recruiter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter the name of the Sr Recruiter under whom the application recruiter will be working on.</inlineHelpText>
    <label>Reporting to</label>
    <referenceTo>Recruiter__c</referenceTo>
    <relationshipName>Recruiters</relationshipName>
    <type>Lookup</type>
</CustomField>