brain/sources/prod-metadata/objects/Recruiter__c/fields/Buffer_Minutes_Before_After__c.field-meta.xml
<CustomField>
    <fullName>Buffer_Minutes_Before_After__c</fullName>
    <label>Buffer Minutes Before/After</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>