brain/sources/prod-metadata/objects/Recruiter__c/fields/COMPASS_State_JSON__c.field-meta.xml
<CustomField>
    <fullName>COMPASS_State_JSON__c</fullName>
    <inlineHelpText>zed COMPASS-R  
engine state for this  
employee (Kalman filter,  
momentum, histories,  
velocity EMAs, etc.).  
Written by the  
COMPASS Lambda after  
each run; read on the  
next run to resume state.  
Opaque JSON — do not  
hand-edit.</inlineHelpText>
    <label>COMPASS State JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>