brain/sources/prod-metadata/objects/Recruiter__c/fields/COMPASS_State_Last_Saved_UTC__c.field-meta.xml
<CustomField>
    <fullName>COMPASS_State_Last_Saved_UTC__c</fullName>
    <inlineHelpText>UTC timestamp of the  
most recent COMPASS  
run that wrote to  
COMPASS_State_JSON  
__c. Use this to spot  
stale/skipped employees.</inlineHelpText>
    <label>COMPASS State Last Saved (UTC)</label>
    <type>DateTime</type>
</CustomField>