brain/sources/prod-metadata/objects/Recruiter__c/fields/COMPASS_State_Schema_Version__c.field-meta.xml
<CustomField>
    <fullName>COMPASS_State_Schema_Version__c</fullName>
    <inlineHelpText>version of the  
JSON blob in  
COMPASS_State_JSON  
__c. Enables safe  
evolution of the blob  
format in future Lambda  
releases.</inlineHelpText>
    <label>COMPASS State Schema Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>