brain/sources/prod-metadata/objects/Recruiter__c/fields/Confidence_score__c.field-meta.xml
<CustomField>
    <fullName>Confidence_score__c</fullName>
    <label>Confidence score</label>
    <type>TextArea</type>
</CustomField>