brain/sources/prod-metadata/objects/Recruiter__c/fields/Confidence_Score_AI_ML_Coding__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Score_AI_ML_Coding__c</fullName>
    <label>Confidence_Score_AI/ML_Coding</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>