brain/sources/prod-metadata/objects/Recruiter__c/fields/Confidence_Score_Leetcode__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Score_Leetcode__c</fullName>
    <label>Confidence_Score_Leetcode</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>