brain/sources/prod-metadata/objects/Recruiter__c/fields/Daily_Max_Interview_Hours__c.field-meta.xml
<CustomField>
    <fullName>Daily_Max_Interview_Hours__c</fullName>
    <label>Daily Max Interview Hours</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>