brain/sources/prod-metadata/objects/Recruiter__c/fields/Date_of_Joining__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Joining__c</fullName>
    <label>Date of Joining</label>
    <type>Date</type>
</CustomField>