brain/sources/prod-metadata/objects/Recruiter__c/fields/Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Employment_Status__c</fullName>
    <label>Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active Employee</fullName>
                <default>true</default>
                <label>Active Employee</label>
            </value>
            <value>
                <fullName>Former Employee</fullName>
            </value>
            <value>
                <fullName>Leave of Absense</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>