brain/sources/prod-metadata/objects/Recruiter__c/fields/End_Time_IST__c.field-meta.xml
<CustomField>
    <fullName>End_Time_IST__c</fullName>
    <label>End Time IST</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Times</valueSetName>
    </valueSet>
</CustomField>