brain/sources/prod-metadata/objects/Recruiter__c/fields/Experience_Level__c.field-meta.xml
<CustomField>
    <fullName>Experience_Level__c</fullName>
    <label>Experience Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fresher level</fullName>
            </value>
            <value>
                <fullName>Beginner Level</fullName>
            </value>
            <value>
                <fullName>Mid Level</fullName>
            </value>
            <value>
                <fullName>Senior Level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>