brain/sources/prod-metadata/objects/Recruiter__c/fields/Last_Working_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Working_Date__c</fullName>
    <label>Last Working Date</label>
    <type>Date</type>
</CustomField>