brain/sources/prod-metadata/objects/Recruiter__c/fields/Leave_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Leave_End_Date_Time__c</fullName>
    <label>Leave End Date/Time</label>
    <type>DateTime</type>
</CustomField>