brain/sources/prod-metadata/objects/Recruiter__c/fields/Leave_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Leave_Start_Date_Time__c</fullName>
    <label>Leave  Start Date/Time</label>
    <type>DateTime</type>
</CustomField>