brain/sources/prod-metadata/objects/Recruiter__c/fields/No_of_Assigned_Candidates__c.field-meta.xml
<CustomField>
    <fullName>No_of_Assigned_Candidates__c</fullName>
    <label>No of Assigned Candidates</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>