brain/sources/prod-metadata/objects/Recruiter__c/fields/On_break__c.field-meta.xml
<CustomField>
    <fullName>On_break__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On break</label>
    <type>Checkbox</type>
</CustomField>