brain/sources/prod-metadata/objects/Recruiter__c/fields/On_Leave_Today__c.field-meta.xml
<CustomField>
    <fullName>On_Leave_Today__c</fullName>
    <label>On Leave Today</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Half Day</fullName>
            </value>
            <value>
                <fullName>Full Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>