brain/sources/prod-metadata/objects/Recruiter__c/fields/PersonAccount__c.field-meta.xml
<CustomField>
    <fullName>PersonAccount__c</fullName>
    <label>PersonAccount</label>
    <length>50</length>
    <type>Text</type>
</CustomField>