brain/sources/prod-metadata/objects/Recruiter__c/fields/Phone_No__c.field-meta.xml
<CustomField>
    <fullName>Phone_No__c</fullName>
    <label>Phone No</label>
    <length>25</length>
    <type>Text</type>
</CustomField>