brain/sources/prod-metadata/objects/Recruiter__c/fields/Preferred_Lunch_Start_IST__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Lunch_Start_IST__c</fullName>
    <label>Preferred Lunch Start (IST)</label>
    <type>Time</type>
</CustomField>