brain/sources/prod-metadata/objects/Recruiter__c/fields/Primary_Track__c.field-meta.xml
<CustomField>
    <fullName>Primary_Track__c</fullName>
    <label>Primary Track</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>BA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>