brain/sources/prod-metadata/objects/Recruiter__c/fields/Recruiter_Contact__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Contact</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Recruiters</relationshipName>
    <type>Lookup</type>
</CustomField>