brain/sources/prod-metadata/objects/Recruiter__c/fields/Recruiter_User__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recruiter User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Recruiters1</relationshipName>
    <type>Lookup</type>
</CustomField>