brain/sources/prod-metadata/objects/Recruiter__c/fields/Start_Time_IST__c.field-meta.xml
<CustomField>
    <fullName>Start_Time_IST__c</fullName>
    <label>Start Time IST</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Times</valueSetName>
    </valueSet>
</CustomField>