brain/sources/prod-metadata/objects/Recruiter__c/fields/Target_Per_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Target_Per_Candidate__c</fullName>
    <label>Target Per Candidate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>