brain/sources/prod-metadata/objects/Recruiter__c/fields/Tomorrow_Availability__c.field-meta.xml
<CustomField>
    <fullName>Tomorrow_Availability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tomorrow Availability</label>
    <type>Checkbox</type>
</CustomField>