brain/sources/prod-metadata/objects/Recruiter__c/fields/Total_Target__c.field-meta.xml
<CustomField>
    <fullName>Total_Target__c</fullName>
    <label>Total Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>