brain/sources/prod-metadata/objects/Recruiter__c/fields/Workday_Start_Time_IST__c.field-meta.xml
<CustomField>
    <fullName>Workday_Start_Time_IST__c</fullName>
    <label>Workday Start Time (IST)</label>
    <type>Time</type>
</CustomField>