brain/sources/prod-metadata/objects/Recruiter__c/validationRules/Start_End_Time_Required_If_Tomorrow_Avai.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_End_Time_Required_If_Tomorrow_Avai</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   Tomorrow_Availability__c = TRUE,
   OR(
      ISPICKVAL(Start_Time_IST__c, &quot;&quot;),
      ISPICKVAL(End_Time_IST__c, &quot;&quot;)
   )
)</errorConditionFormula>
    <errorMessage>Start Time IST and End Time IST are required when Tomorrow Availability is checked.</errorMessage>
</ValidationRule>